pubs: Use most recent Starlink reference and cite STC IVOA recommendation

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -44,18 +44,19 @@
   year =         2013,
 }
 
-@InProceedings{StarlinkAdass,
-  author =       {{Berry}, D.~S. and {Currie}, M. and {Jenness}, T. and
-                  {Draper}, P. and {Bell}, G. and {Tilanus}, R.},
-  title =        {{Starlink 2012: The Kapuahi Release}},
-  booktitle =    {Astronomical Data Analysis Software and Systems XXII},
-  pages =        {247-250},
-  year =         2013,
-  editor =       {{Friedel}, D.N.},
-  volume =       {475},
-  series =       {\aspconf},
-  address =      {San Francisco},
-  publisher =    {ASP},
+@INPROCEEDINGS{StarlinkAdass,
+   author = {{Currie}, M.~J. and {Berry}, D.~S. and {Jenness}, T. and {Gibb}, A.~G. and
+	{Bell}, G.~S. and {Draper}, P.~W.},
+    title = "{Starlink Software in 2013}",
+booktitle = {Astronomical Data Anaylsis Softward and Systems XXIII},
+     year = 2014,
+   series = {ASP Conf.\ Ser.},
+   volume = 485,
+   editor = {{Manset}, N. and {Forshay}, P.},
+    month = may,
+    pages = {391},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ASPC..485..391C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @MastersThesis{2010Watson,
@@ -108,6 +109,16 @@ archivePrefix = "arXiv",
   url =       {http://www.ivoa.net/documents/latest/STC-S.html},
 }
 
+@Misc{2007STC,
+  author = {A. H. Rots},
+  title = "{IVOA Recommendation: Space-Time Coordinate Metadata for the Virtual Observatory}",
+  eprint = {1110.0504},
+  archivePrefix = "arXiv",
+  year = {2007},
+  month = oct,
+  url = {http://www.ivoa.net/documents/latest/STC.html},
+}
+
 @INPROCEEDINGS{2010ASPC..434..213B,
    author = {{Berry}, D. and {Draper}, P.},
     title = "{Using the AST Library to Create and Use STC-S Region Descriptions}",
@@ -129,5 +140,4 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
    year = {2013},
     url = {http://www.jach.hawaii.edu/jps/SourceExtractionTWG?action=AttachFile&do=view&target=CUPID+Routine+Evaluation.pdf},
 }
-
 
