--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -471,7 +471,7 @@ outside the clump set to a special ``blank'' value.
 \item[Peak] The peak value in the clump.
 \item[Volume] The total number of pixels falling within the clump.
 \item[Shape] An optional column containing an STC-S description
-\citep{2007STCS,2010ASPC..434..213B} of the spatial coverage of the clump.
+\citep{2007STCS,2007STC,2010ASPC..434..213B} of the spatial coverage of the clump.
 \end{description}
 
 \end{enumerate}
