pubs: mention gaussclumps as well

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -141,3 +141,17 @@ booktitle = {Astronomical Data Analysis Software and Systems XIX},
     url = {http://www.jach.hawaii.edu/jps/SourceExtractionTWG?action=AttachFile&do=view&target=CUPID+Routine+Evaluation.pdf},
 }
 
+@ARTICLE{1990ApJ...356..513S,
+   author = {{Stutzki}, J. and {Guesten}, R.},
+    title = "{High spatial resolution isotopic CO and CS observations of M17 SW - The clumpy structure of the molecular cloud core}",
+  journal = {\apj},
+ keywords = {Carbon Monoxide, Molecular Clouds, Nebulae, Spatial Resolution, Sulfides, Abundance, Astronomical Maps, Brightness Temperature, Carbon Compounds, Emission Spectra, Line Spectra, Spectral Line Width},
+     year = 1990,
+    month = jun,
+   volume = 356,
+    pages = {513-533},
+      doi = {10.1086/168859},
+   adsurl = {http://adsabs.harvard.edu/abs/1990ApJ...356..513S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
