--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -509,7 +509,7 @@ clump volume should be unchanged by the instrumental blurring:
 \section{\label{sec:cupid}CUPID - an Implementation of FellWalker}
 The Starlink CUPID package \citep[][\ascl{1311.007}]{CupidAdass,SUN255} provides
 implementations of various clump-finding algorithms, including FellWalker,
-Gaussclumps \citep[1406.018][\ascl{}]{1990ApJ...356..513S},
+Gaussclumps \citep[][\ascl{1406.018}]{1990ApJ...356..513S},
 and CLUMPFIND. In common with the rest of the Starlink software \citep[][\ascl{1110.012}]{StarlinkAdass},
 the source code for the CUPID package is open-source and is available on
 \htmladdnormallinkfoot{Github}{https://github.com/Starlink}.
