pubs: Add sentence about cupid common file format

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -510,7 +510,9 @@ clump volume should be unchanged by the instrumental blurring:
 The Starlink CUPID package \citep[][\ascl{1311.007}]{CupidAdass,SUN255} provides
 implementations of various clump-finding algorithms, including FellWalker,
 Gaussclumps \citep[][\ascl{1406.018}]{1990ApJ...356..513S},
-and CLUMPFIND. In common with the rest of the Starlink software \citep[][\ascl{1110.012}]{StarlinkAdass},
+and CLUMPFIND. One of the aims of the CUPID package is to make it easy to compare
+clump-finding algorithms by ensuring that the results are written out in a common format.
+In common with the rest of the Starlink software \citep[][\ascl{1110.012}]{StarlinkAdass},
 the source code for the CUPID package is open-source and is available on
 \htmladdnormallinkfoot{Github}{https://github.com/Starlink}.
 
