pubs: cupid section no longer exists so don't refer to it

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -448,7 +448,7 @@ The number of clumps rejected for each of these reasons is reported.
 
 \subsection{Characterising Each Clump}
 The FellWalker algorithm is implemented within the {\tt findclumps}
-command of the Starlink CUPID package (see section~\ref{sec:cupid}). This
+command of the Starlink CUPID package. This
 command implements several other clump finding algorithms in addition to
 FellWalker, and one of its design requirements was that each algorithm should characterise clumps in
 the same way, so that results from different algorithms can be compared
