docs: "in press" paper in SC/6 was published 12 years ago

--- a/docs/sc/006/sc6.tex
+++ b/docs/sc/006/sc6.tex
@@ -3949,10 +3949,8 @@ Any mistakes are, of course, our own.
    Naturwissenschaften und Technik}, K.~Schaifers and H.H.~Voigt (Eds),
    {\bf VI/2c}, Astronomie und Astrophysik (Springer-Verlag: Berlin), p45.
 
-  \bibitem{SIMONS01} D. A. Simons and A. Tokunaga, 2001, to appear in
-   {\it Publ. Astron. Soc. Pacific}.  Also available as
-   \htmladdnormallink{Gemini Preprint no. 73}
-   {http://www.gemini.edu/documentation/preprints/pre73.html}.
+  \bibitem{SIMONS01} D. A. Simons and A. Tokunaga, 2002,
+   {\it Publ. Astron. Soc. Pacific}, \textbf{114}, 169
 
   \bibitem{STERKEN92} Chr.~Sterken and J.~Manfroid, 1992, {\it
    Astronomical Photometry --- A Guide}\, (Kluwer Academic Publishers:
