surf: Mention SURF ASCL entry

--- a/applications/surf/docs/sun216/sun216.tex
+++ b/applications/surf/docs/sun216/sun216.tex
@@ -3050,6 +3050,8 @@ ORAC-DR at the JCMT}'', in \textit{Astronomical Data Analysis Software and
 Systems VIII}, ASP Conf.\ Ser., \textbf{172}, 171
 \end{quote}
 
+The SURF software package is registered with the Astrophysics Source Code
+Library as \texttt{ascl:1403.008}.
 
 \section{\xlabel{future}Future Work\label{future}}
 
