fluxes: Cite the arXiv Mars paper not "private comm."
SUN/213 still needs to be updated to mention the Herschel
calibration.

--- a/applications/fluxes/sun213.tex
+++ b/applications/fluxes/sun213.tex
@@ -503,7 +503,7 @@ of FLUXES.
 
 Before MJD 46040 and, more importantly, since MJD 50000, FLUXES uses a
 modification of Wright's rotating cratered asteroid program (Wright,
-E.L., 1995; private communication to H.E. Matthews). This reproduces
+E.L., 2007 arXiv:astro-ph/0703640). This reproduces
 82\%\ of the $T_b$ values in Table~6 of Wright (1976) exactly (where they are
 rounded to the nearest Kelvin), while the other 18\%\ differ by only $\pm1$~K.
 A low-precision formula by Van Flandern and Pulkinnen,
