pubs: Include reference to Christie et al (in prep)

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -1,3 +1,21 @@
+@ARTICLE{2014Christie,
+  author =       {{Christie}, H. and
+                  {Viti}, S. and
+                  {Yates}, J. and
+                  {Hatchell}, J. and
+                  {Di Francesco}, J. and
+                  {Berry}, D. and
+                  {Buckle}, J.~V. and
+                  {Fuller}, G.~A. and
+                  {Thompson}, M.~A. and
+                  {Graves}, S. and
+                  {Nutter}, D. and
+                  {Roberts}, J.~F.},
+  title =        "{The JCMT Gould Belt SurveyL Categorising CO Emission in the Gould Belt Clouds}",
+  year =         {in prep},
+  journal =      {\mnras},
+}
+
 @ARTICLE{2009Pineda,
   author =       {{Pineda}, J.~E. and {Rosolowsky}, E.~W. and {Goodman},
                   A.~A.},
