pubs: Fellwalker - more acknowledgements

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -766,6 +766,10 @@ another, and so merge clumps together that are in fact distinct.
 
 \section{Acknowledgements}
 
+I would like to thank Tim Jenness and Frossie Economou for encouraging
+the development of the CUPID package and the FellWalker algorithm, and
+for providing helpful comments on this paper.
+
 The Starlink software is currently maintained by the Joint Astronomy
 Centre, Hawaii with support from the UK Science and Technology
 Facilities Council.
