ast: typo fix in documentation

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -9284,7 +9284,7 @@ Format(axis) value has been set to override the default.
 \subsection{Representing Offsets from a Specified Sky Position}
 A SkyFrame can be modified so that its longitude and latitude axes are
 referred to an origin at any specified sky position. Such a coordinate
-system is referred to as an ``offset'' coordinate syetem. First, the System
+system is referred to as an ``offset'' coordinate system. First, the System
 attribute should be set to represent the celestial coordinate system in
 which the origin is to be specified. Then the SkyRef attribute should be
 set to hold the coordinates of the origin within the selected celestial
@@ -9934,7 +9934,7 @@ supplied without making any correction for daylight saving.
 
 \item[TimeOrigin]\mbox{}\\
 This specifies the zero point from which time values are measured, within
-the system specified by the System attribute. Thus, a value ofzero (the
+the system specified by the System attribute. Thus, a value of zero (the
 default) indicates that time values represent absolute times. Non-zero
 values may be used to indicate that the TimeFrame represents elapsed time
 since the specified origin.
