pubs: FellWalker - add 3D CLUMPFIND comparison and comment on relative speeds

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -11,7 +11,7 @@
                   {Graves}, S. and
                   {Nutter}, D. and
                   {Roberts}, J.~F.},
-  title =        "{The JCMT Gould Belt SurveyL Categorising CO Emission in the Gould Belt Clouds}",
+  title =        "{The JCMT Gould Belt Survey: Categorising CO Emission in the Gould Belt Clouds}",
   year =         {in prep},
   journal =      {\mnras},
 }
